--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+@import url(http://weloveiconfonts.com/api/?family=entypo|fontawesome);
+@import url(http://weloveiconfonts.com/api/?family=fontawesome);
+/* entypo */
+[class*="entypo-"]:before {
+  font-family: 'entypo', sans-serif;
+}
+
+/* fontawesome */
+[class*="fontawesome-"]:before {
+  font-family: 'FontAwesome', sans-serif;
+}
+
 body,
 div,
 ul,
@@ -12,6 +24,11 @@ h6 {
   padding:0;
   margin:0;
   font-family: "Oswald", sans-serif;
+}
+
+hr {
+  border: 5px;
+  background-color: #bcbbbb;
 }
 
 .clear-fix {
@@ -74,7 +91,7 @@ h5 {
   color: #A0A0A0;
   line-height: 16px;
   float: left;
-  padding: 5px 5%;
+  padding: 5px 5%; //TODO: Check, there must be a better way;
 }
 
 .location-text {
