--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ h6 {
   padding:0;
   margin:0;
   font-family: "Oswald", sans-serif;
+  color: #383838;
 }
 
 hr {
@@ -43,7 +44,6 @@ hr {
 
 h1 {
   font-size: 50px;
-  color: #383838;
   line-height: 48px;
   display: inline;
   text-transform: uppercase; 
@@ -53,7 +53,6 @@ h1 {
 h2 {
   font-weight: bold;
   font-size: 24px;
-  color: #383838;
   line-height: 29px;
   padding: 10px;
 
@@ -63,7 +62,6 @@ h3 {
   font-family: "bitter";
   font-style: italic;
   font-size: 20px;
-  color: #383838;
   line-height: 22px;
 }
 
@@ -71,7 +69,6 @@ h4 {
   font-family: "bitter";
   font-weight: bold;
   font-size: 14px;
-  color: #383838;
   line-height: 17px;
 }
 
@@ -111,6 +108,34 @@ h5 {
   line-height: 21px;
 }
 
+/*.date-text {
+  font-family: "Roboto";
+  font-style: italic;
+  font-size: 14px;
+  color: #A0A0A0;
+  line-height: 16px;
+  float: left;
+  padding: 5px 5%; //TODO: Check, there must be a better way;
+}
+
+.location-text {
+  font-family: "Roboto";
+  font-style: italic;
+  font-size: 14px;
+  color: ##084C8D;
+  line-height: 16px;
+  float: right;
+
+}
+.degree-major {
+  font-family: "Roboto";
+  font-style: italic;
+  font-size: 14px;
+  color: #393939;
+  line-height: 21px;
+}
+*/
+
 p {
   font-family: "Roboto";
   font-size: 14px;
@@ -138,11 +163,11 @@ a {
   display: none;
 }
 
-.orange {
+.red {
   background-color: #A30013; 
 }
 
-.orange-text {
+.red-text {
   color: #A30013;
 }
 
@@ -165,6 +190,12 @@ a {
 #header {
   background-color: #FFF2E7;
 }
+/*.col-md-6 { 
+  padding-left: 50px;
+  padding-right: 10px;
+}
+*/
+/*Padding doesn't work*/
 
 .flex-box {
   display: -webkit-flex;
